src/scss/modules/_image-example.scss
.image-example {
  margin-top: 5px;
  width: 91px;

  &__img {
    position: fixed;
    transform: translateX(-50%);
    border-radius: 10px;
    opacity: 0;
    visibility: hidden;
    z-index: 1;

    &:before {
      position: absolute;
      content: '';
      display: block;
      left: 50%;
      transform: translateX(-50%);
      top: 100%;
      width: 0;
      height: 0;
      border-style: solid;
      border-width: 8px 9.5px 0 9.5px;
      border-color: #333 transparent transparent transparent;
    }

    img {
      border-radius: 10px;
      width: 234px;
      height: 366px;
      object-fit: cover;
    }
  }

  &__btn {
    color: #FFAB55;
    font-size: rem(8px);
    letter-spacing: rem(1.2px);
    height: 22px;
    min-width: 91px;
    padding: 0 5px;
    line-height: rem(16px);
    text-transform: uppercase;
    border-radius: 4px;
    background-color: #FFFFFF;
    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.12);
    border: 0;
  }

  &__btn:hover + &__img,
  &__btn:focus + &__img {
    opacity: 1;
    visibility: visible;
  }
}

